Add code to merge json